Added travel book section and vehicles details

--- a/index.html
+++ b/index.html
@@ -80,6 +80,300 @@
 		</div>
 	</section>
 
+	<section id="resume" class="grey-section">
+		<div class="row section-intro">
+			<div class="col-twelve">
+				<h1>Vehicles Offered</h1>
+			</div>
+		</div>
+
+		<div class="row resume-timeline">
+			<div class="col-twelve">
+				<div class="timeline-wrap">
+					<div class="timeline-block">
+						<div class="timeline-ico">
+							<i class="fa fa-car"></i>
+						</div>
+						<div class="timeline-content">
+							<h4>Maruti Suzuki Ertiga</h4>
+							<p>7 Seater | Hatchback</p>
+						</div>
+					</div>
+					<div class="timeline-block">
+						<div class="timeline-ico">
+							<i class="fa fa-car"></i>
+						</div>
+						<div class="timeline-content">
+							<h4>Toyota Innova Crysta</h4>
+							<p>7 Seater | Hatchback</p>
+						</div>
+					</div>
+					<div class="timeline-block">
+						<div class="timeline-ico">
+							<i class="fa fa-car"></i>
+						</div>
+						<div class="timeline-content">
+							<h4>Tempo Traveller</h4>
+							<p>14 Seater and 20 Seater | Van (Small Truck)</p>
+						</div>
+					</div>
+					<div class="timeline-block">
+						<div class="timeline-ico">
+							<i class="fa fa-car"></i>
+						</div>
+						<div class="timeline-content">
+							<h4>Mini Bus</h4>
+							<p>25 Seater | Bus</p>
+						</div>
+					</div>					
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section id="portfolio">
+		<div class="row section-intro">
+			<div class="col-twelve">
+				<h5>Travel Book</h5>
+				<h1>Some Gems of Goa</h1>
+				<p class="lead">Not just these, there's a lot more to explore in Goa!</p>
+			</div>
+		</div>
+		<div class="row portfolio-content">
+			<div class="col-twelve">
+				<div id="folio-wrapper" class="block-1-2 block-mob-full stack">
+					<div class="bgrid folio-item">
+						<div class="item-wrap">
+							<img src="images/showcase/4.jpg" alt="Candolim Beach">
+							<a href="#modal-01" class="overlay">
+								<div class="folio-item-table">
+									<div class="folio-item-cell">
+										<h3 class="folio-title">Candolim Beach</h3>
+										<span class="folio-types">
+											Beach
+										</span>
+									</div>
+								</div>
+							</a>
+						</div>
+					</div>
+
+					<div class="bgrid folio-item">
+						<div class="item-wrap">
+							<img src="images/showcase/1.jpg" alt="Calangute Beach">
+							<a href="#modal-02" class="overlay">
+								<div class="folio-item-table">
+									<div class="folio-item-cell">
+										<h3 class="folio-title">Calangute Beach</h3>
+										<span class="folio-types">
+											Beach
+										</span>
+									</div>
+								</div>
+							</a>
+						</div>
+					</div>
+
+					<div class="bgrid folio-item">
+						<div class="item-wrap">
+							<img src="images/showcase/2.jpg" alt="Anjuna Beach">
+							<a href="#modal-03" class="overlay">
+								<div class="folio-item-table">
+									<div class="folio-item-cell">
+										<h3 class="folio-title">Anjuna Beach</h3>
+										<span class="folio-types">Beach</span>
+									</div>
+								</div>
+							</a>
+						</div>
+					</div>
+
+					<div class="bgrid folio-item">
+						<div class="item-wrap">
+							<img src="images/showcase/3.jpg" alt="Basilica of Bom Jesus">
+							<a href="#modal-04" class="overlay">
+								<div class="folio-item-table">
+									<div class="folio-item-cell">
+										<h3 class="folio-title">Basilica of Bom Jesus</h3>
+										<span class="folio-types">Church</span>
+									</div>
+								</div>
+							</a>
+						</div>
+					</div>
+					<div class="bgrid folio-item">
+						<div class="item-wrap">
+							<img src="images/showcase/5.jpg" alt="Vagator Beach">
+							<a href="#modal-05" class="overlay">
+								<div class="folio-item-table">
+									<div class="folio-item-cell">
+										<h3 class="folio-title">Vagator Beach</h3>
+										<span class="folio-types">Beach</span>
+									</div>
+								</div>
+							</a>
+						</div>
+					</div>
+					<div class="bgrid folio-item">
+						<div class="item-wrap">
+							<img src="images/showcase/6.jpg" alt="Vagator Beach">
+							<a href="#modal-06" class="overlay">
+								<div class="folio-item-table">
+									<div class="folio-item-cell">
+										<h3 class="folio-title">Casinos</h3>
+										<span class="folio-types">Entertainment</span>
+									</div>
+								</div>
+							</a>
+						</div>
+					</div>
+					<div class="bgrid folio-item">
+						<div class="item-wrap">
+							<img src="images/showcase/7.jpg" alt="Arambol Beach">
+							<a href="#modal-07" class="overlay">
+								<div class="folio-item-table">
+									<div class="folio-item-cell">
+										<h3 class="folio-title">Arambol Beach</h3>
+										<span class="folio-types">Beach</span>
+									</div>
+								</div>
+							</a>
+						</div>
+					</div>
+					<div class="bgrid folio-item">
+						<div class="item-wrap">
+							<img src="images/showcase/8.jpg" alt="Chapora Fort">
+							<a href="#modal-08" class="overlay">
+								<div class="folio-item-table">
+									<div class="folio-item-cell">
+										<h3 class="folio-title">Chapora Fort</h3>
+										<span class="folio-types">Fort</span>
+									</div>
+								</div>
+							</a>
+						</div>
+					</div>
+					<div id="modal-01" class="popup-modal slider mfp-hide">
+						<div class="media">
+							<img src="images/showcase/4.jpg" alt="" />
+						</div>
+						<div class="description-box">
+							<h4>Candolim Beach</h4>
+							<p>One of the longest beaches in Goa, Candolim Beach is also sometimes called the gateway to the other popular beaches in the state. The beach that begins from Fort Aguada is comparatively quieter and is perfect for lazing, though for watersports lovers, there are some activities like parasailing and water skiing.</p>
+							<p>The beach is quite popular amongst the people from the Rajneesh Ashram in Pune who visit here on a short break. The Candolim-Calangute Road is dotted with a number of shops and restaurants for the tourists to shop and hangout. People who are seeking a quieter staying place in Goa usually book their hotel near Candolim Beach.</p>
+							<div class="categories">Beach</div>
+						</div>
+						<div class="link-box">
+							<a href="#" class="popup-modal-dismiss">Close</a>
+						</div>
+					</div>
+
+					<div id="modal-02" class="popup-modal slider mfp-hide">
+						<div class="media">
+							<img src="images/showcase/1.jpg" alt="" />
+						</div>
+						<div class="description-box">
+							<h4>Calangute Beach</h4>
+							<p>Dubbed the Queen of Beaches, Calangute Beach is unarguably one of the most popular beaches in Goa. It is also the busiest beach in North Goa with restaurants, shacks, and clubs fringing it. Calangute is also quite popular amongst adventurers as it has a number of watersports available like parasailing, water surfing, banana ride and jet-skiing. The nightlife of Calangute Beach is the best with crazy parties and live music for the nightlife lover.</p>
+							<p>Encircled by palm and coconut trees, the beach is spread four miles along the Arabian Sea and nine miles from the Panaji. Accompanied by Candolim village that wings it towards south and crossroads of Baga towards north, Calangute Beach forges the real attraction of Goa tourism. Calangute Beach is a perfect tourist retreat, filled with souvenir stalls, shacks and other stalls selling everything from beer, trinkets to pawns. All these simply add to the popularity of beach, making it a must-visit place in Goa. So, if you want an unstrained solitude, plan for Calangute beach holidays as it's a perfect destination for nature freaks and the glorious view of locales enfolding serene ambiance, mark the place as a dream destination for beach bums.</p>
+							<div class="categories">Beach</div>
+						</div>
+						<div class="link-box">
+							<a href="#" class="popup-modal-dismiss">Close</a>
+						</div>
+					</div>
+
+					<div id="modal-03" class="popup-modal slider mfp-hide">
+						<div class="media">
+							<img src="images/showcase/2.jpg" alt="" />
+						</div>
+						<div class="description-box">
+							<h4>Anjuna Beach</h4>
+							<p>Amongst the most popular beaches in Goa, Anjuna Beach has a rich past of hippie culture. However, this beach that stretches almost 2 km is also popular amongst families and water sports lovers. At night, Anjuna Beach becomes one of the best hubs in Goa for nightlife. At Anjuna Beach, there is one of the most popular nightclubs in Goa, Paradiso. There are a number of great eateries like Curlies that's perfect as a daytime hangout. Apart from its scenic beach stretch, Anjuna is also known for its Wednesday Flea Market.</p>
+							<p>Anjuna beach Goa is an ideal choice for nature buffs, who love to enjoy full moon parties during the New Year and Christmas. Visitors on this very day rejuvenate themselves in a pleasurable atmosphere of the lucent full-moon casting a magic charm and the soft frothing waves snuggling their feet. So, if you wanna experience the real beauty of landscapes, luxury accommodation, seclusion, nightlife parties, reliable seafood dainties and voguish shopping opportunities, plan for Anjuna Beach Holidays and make it your best ever holiday experience for ages.</p>
+							<div class="categories">Beach</div>
+						</div>
+						<div class="link-box">
+							<a href="#" class="popup-modal-dismiss">Close</a>
+						</div>
+					</div>
+					<div id="modal-04" class="popup-modal slider mfp-hide">
+						<div class="media">
+							<img src="images/showcase/3.jpg" alt="" />
+						</div>
+						<div class="description-box">
+							<h4>Basilica of Bom Jesus</h4>
+							<p>A towering structure in the Old Goa Church complex, the Bom Jesu church is famous. It houses the mortal remains of St. Francis Xavier, the patron saint of Goa. The church has many beautiful altars and lovely artwork on the ceiling.</p>
+							<p>On the first floor of the church, there is a small art gallery. For a historic insight into the church, you can hire a freelance guide from outside the church for Rs. 100.</p>
+							<div class="categories">Church</div>
+						</div>
+						<div class="link-box">
+							<a href="#" class="popup-modal-dismiss">Close</a>
+						</div>
+					</div>
+					<div id="modal-05" class="popup-modal slider mfp-hide">
+						<div class="media">
+							<img src="images/showcase/5.jpg" alt="" />
+						</div>
+						<div class="description-box">
+							<h4>Vagator Beach</h4>
+							<p>At Vagator Beach, a curved stretch of sand overlooked by the Chapora Fort, you will find a lot of activities occurring simultaneously. Decent sized bars serve food & drinks, a cricket game in progress & vendors selling refreshing coconut water. The beach is dotted with a hillock on one side & headland on the other.</p>
+							<p>Located in north Goa, it is situated at the end of the Sinquerim, Candolim, Calangute, Baga & Anjuna stretch, and is separated from Morjim by the Chapora River. The beach itself is divided into two parts, Big Vagator & Little Vagator.</p>
+							<p>You should try & visit this beach during your holidays in Goa, not just because it promises you a lovely time, but also because it is “the most photographed beach in Goa”. Besides watching the sunset, you can also try out a variety of water sports.</p>
+							<div class="categories">Beach</div>
+						</div>
+						<div class="link-box">
+							<a href="#" class="popup-modal-dismiss">Close</a>
+						</div>
+					</div>
+					<div id="modal-06" class="popup-modal slider mfp-hide">
+						<div class="media">
+							<img src="images/showcase/6.jpg" alt="" />
+						</div>
+						<div class="description-box">
+							<h4>Casinos</h4>
+							<p>Goa is one of the few places in India, probably the only one where you can enjoy gambling. Held offshore, casinos in Goa are housed inside ships docked near Miramar.</p>
+							<p>Open to anyone above the age of 18, at these casinos, you can try your luck at winning bumper prices or some extra money at the slot machines. There's food and alcohol available too, in case you are looking to grab a bite or celebrate, after winning some moolah.</p>
+							<div class="categories">Entertainment</div>
+						</div>
+						<div class="link-box">
+							<a href="#" class="popup-modal-dismiss">Close</a>
+						</div>
+					</div>
+					<div id="modal-07" class="popup-modal slider mfp-hide">
+						<div class="media">
+							<img src="images/showcase/7.jpg" alt="" />
+						</div>
+						<div class="description-box">
+							<h4>Arambol Beach</h4>
+							<p>One of the most beautiful beaches in North Goa, Arambol or Harmal Beach is a must-see on your holiday in the state. The beach has a distinct Bohmenian and laid-back vibe, probably because it was once a popular hippie beach in Goa. Arambol a silvery sand beach that also has rocks making it look quite stunning. It is also one of the greenest beaches in Goa.</p>
+							<p>Arambol Beach is a perfect place for taking Yoga classes. The beach also has a drum circle; a weekend beachside market; and a mystical baba sitting on top of a hillock. One can enjoy adventure sports like paragliding in Arambol or simply stroll about the market lanes. At one end of the beach is a sweet water Paliem Lake, which is a must-see attraction at Arambol. Another not to miss place is the The Banyan Tree, where the members of the popular band, The Beatles once meditated.</p>
+							<p>The beach is also known for its festivals like Arambol Festival or Freak Festival in February; Arambol World Music Festival and The Tantra Festival in January.</p>
+							<div class="categories">Beach</div>
+						</div>
+						<div class="link-box">
+							<a href="#" class="popup-modal-dismiss">Close</a>
+						</div>
+					</div>
+					<div id="modal-08" class="popup-modal slider mfp-hide">
+						<div class="media">
+							<img src="images/showcase/8.jpg" alt="" />
+						</div>
+						<div class="description-box">
+							<h4>Chapora Fort</h4>
+							<p>The Chapora Fort actually became famous after the Hindi film Dil Chahta Hai was filmed here. The fort was built by the Portuguese in 1617 near the Chapora river. Made entirely from laterite rock, the fort now stands in ruins. However, there are some portions of the fort that still stand strong.</p>
+							<p>Getting to the fort is simple, you can either go to the fort by bike or walk up to the fort.</p>
+							<div class="categories">Fort</div>
+						</div>
+						<div class="link-box">
+							<a href="#" class="popup-modal-dismiss">Close</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
 	<!-- Call to Action -->
 	<section id="cta" class="grey-section">
 		<div class="row cta-content">
