--- a/index.html
+++ b/index.html
@@ -59,20 +59,20 @@
 					<span class="icon"><i data-feather="star"></i></span>
 					<div class="service-content">
 						<h3>North Goa</h3>
-						<p class="desc">Half and Full day tour packages available for North Goa.</p>
-					</div>
-				</div>
-				<div class="service">
-					<span class="icon"><i data-feather="star"></i></span>
-					<div class="service-content">
-						<h3>South Goa</h3>
-						<p class="desc">Madgaon Station, Vasco Station, Vasco Airport, and Madgaon City</p>
+						<p class="desc">Half and Full day tour packages available for North and South Goa.</p>
 					</div>
 				</div>
 				<div class="service">
 					<span class="icon"><i data-feather="star"></i></span>
 					<div class="service-content">
 						<h3>Pick Up and Drop Service</h3>
+						<p class="desc">Madgaon Station, Vasco Station, Vasco Airport, and Madgaon City</p>
+					</div>
+				</div>
+				<div class="service">
+					<span class="icon"><i data-feather="star"></i></span>
+					<div class="service-content">
+						<h3>Out of Station Services</h3>
 						<p class="desc">Service available across Goa, Karnataka, and Maharashtra.</p>
 					</div>
 				</div>
